--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 *{margin: 0; padding: 0;}
 body{
-    background: #daf2f4;
+    background: #feface;
     font-family: 'Fjalla One', sans-serif;
 }
 .container{
@@ -12,7 +12,7 @@ body{
     padding: 50px;
 }
 .country-name{
-    color: #bf0a32;
+    color: #000000;
     font-size: 3em;
     letter-spacing: 0.2em;
 }
@@ -39,55 +39,73 @@ body{
     color: #341d31;
     font-size: 2em;
 }
-.canada-flag{
+.germany-flag{
     width: 100%;
     height: 100%;
-    background: #ffffff;
+    background: #fe0000;
 }
-.canada-flag > .left-red {
+.germany-flag > .top-black {
+    position: absolute;
+    width: 100%;
+    height: 33.3%;
+    background: #000000;
+    top: 0;
+}
+.germany-flag > .middle {
+
+}
+.germany-flag > .bottom {
+    position: absolute;
+    width: 100%;
+    height: 33.3%;
+    background: #fee600;
+    bottom: 0;
+}
+/*
+.germany-flag > .left-red {
     position: absolute;
     width: 30%;
     height: 100%;
     background: #bf0a32;
 }
-.canada-flag > .white {
+.germany-flag > .white {
     position: absolute;
     width: 40%;
     height: 100%;
 }
-.canada-flag > .right-red {
+.germany-flag > .right-red {
     position: absolute;
     right: 0;
     width: 30%;
     height: 100%;
     background: #bf0a32;
-}
-.container > .canadian{
+}*/
+.container > .german{
     position: absolute;
     width: 30%;
     height: 55%;
     bottom: 5%;
     z-index: 3;
 }
-.container > .canadian > .canadian-head {
+.container > .german > .german-head {
     position: absolute;
     width: 50%;
     height: 40%;
     left: 25%;
     top: 5%;
     border-radius: 50% 50% 10% 10%;
-    background: #921703;
+    background: #ffffff;
 }
-.container > .canadian > .canadian-face {
+.container > .german > .german-face {
     position: absolute;
     width: 50%;
     height: 25%;
     left: 25%;
     top: 20%;
-    background: #f69ca8;
+    background: #ffcc8a;
     border-radius: 10%;
 }
-.container > .canadian > .canadian-face > .l-eye {
+.container > .german > .german-face > .l-eye {
     position: absolute;
     top: 40%;
     left: 25%;
@@ -97,7 +115,7 @@ body{
     border-radius: 150px;
     z-index: 2;
 }
-.container > .canadian > .canadian-face > .l-inner-eye {
+.container > .german > .german-face > .l-inner-eye {
     position: absolute;
     top: 42%;
     left: 27%;
@@ -107,7 +125,7 @@ body{
     border-radius: 100px;
     z-index: 3;
 }
-.container > .canadian > .canadian-face > .r-eye {
+.container > .german > .german-face > .r-eye {
     position: absolute;
     top: 40%;
     right: 25%;
@@ -117,7 +135,7 @@ body{
     border-radius: 150px;
     z-index: 2;
 }
-.container > .canadian > .canadian-face > .nose {
+.container > .german > .german-face > .nose {
     position: absolute;
     top: 55%;
     left: 45%;
@@ -129,31 +147,7 @@ body{
     -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
-.container > .canadian > .canadian-face > .hair {
-    position: absolute;
-    top: 15%;
-    left: 25%;
-    width: 9%;
-    height: 13%;
-    background: #ffd400;
-    border-radius: 150px;
-    transform: rotate(210deg);
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .canadian > .canadian-face > .hair2 {
-    position: absolute;
-    top: 15%;
-    left: 35%;
-    width: 20%;
-    height: 14%;
-    background: #ffd400;
-    border-radius: 150px;
-    transform: rotate(200deg);
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .canadian > .canadian-face > .mouth {
+.container > .german > .german-face > .mouth {
     position: absolute;
     top: 75%;
     left: 42%;
@@ -164,7 +158,7 @@ body{
     border-radius: 50px;
     z-index: 3;
 }
-.container > .canadian > .canadian-face > .r-inner-eye {
+.container > .german > .german-face > .r-inner-eye {
     position: absolute;
     top: 42%;
     right: 27%;
@@ -174,121 +168,99 @@ body{
     border-radius: 100px;
     z-index: 3;
 }
-.container > .canadian > .hat-ban {
+.container > .german > .hair-main {
     position: absolute;
     height: 10%;
-    width: 60%;
-    left: 20%;
-    top: 15%;
-    background: #aa6a27;
+    width: 50%;
+    left: 25%;
+    top: 17%;
     z-index: 2;
-    border-radius: 50% 50% 0 0;
+    border: 1px dotted #bd7201;
 }
-.container > .canadian > .left-hat-ear {
+.container > .german > .hair-main > .h-left {
     position: absolute;
-    height: 10%;
-    width: 10%;
-    background: #aa6a27;
-    left: 20%;
-    top: 20%;
-    z-index: 2;
-    border-radius: 40% 40% 0 0;
+    height: 90%;
+    width: 50%;
+    left:0;
+    top: 17%;
+    background: #bd7201;
+    border-radius: 90px 0 300px 0;
 }
-.container > .canadian > .right-hat-ear {
+.container > .german > .hair-main > .h-right {
     position: absolute;
-    height: 10%;
-    width: 10%;
-    background: #aa6a27;
-    right: 20%;
-    top: 20%;
-    z-index: 2;
-    border-radius: 40% 40% 0 0;
+    height: 90%;
+    width: 40%;
+    right:0;
+    top: 17%;
+    background: #bd7201;
+    border-radius: 0 90px 0 300px;
 }
-.container > .canadian > .left-hat-tip {
-    position: absolute;
-    height: 13%;
-    width: 15%;
-    background: #aa6a27;
-    right: 18%;
-    top: 26%;
-    z-index: 2;
-    border-radius: 30% 30% 50% 50%;
-}
-.container > .canadian > .right-hat-tip {
-    position: absolute;
-    height: 13%;
-    width: 15%;
-    background: #aa6a27;
-    left: 18%;
-    top: 26%;
-    z-index: 2;
-    border-radius: 30% 30% 50% 50%;
-}
-.container > .canadian > .canadian-neck {
+
+.container > .german > .german-neck {
     position: absolute;
     height: 5%;
-    width: 20%;
-    left: 39%;
+    width: 7%;
+    left: 46%;
     top: 45%;
     z-index: 4;
-    background: #921703;
-    border-radius: 20%;
+    background: #ffcc8a;
+    border-radius: 0 0 20% 20%;
 } 
-.container > .canadian > .canadian-neck > .h-line{
+.container > .german > .german-neck > .h-line{
     position: absolute;
     height: 100%;
     width: 10%;
     background: #b55d4e;
     left: 25%;
 }
-.container > .canadian > .canadian-neck > .h-line2{
+.container > .german > .german-neck > .h-line2{
     position: absolute;
     height: 100%;
     width: 10%;
     background: #b55d4e;
     left: 10%;
 }
-.container > .canadian > .canadian-body {
+.container > .german > .german-body {
     position: absolute;
     height: 30%;
     width: 50%;
     left: 25%;
     top: 50%;
-    background: #aa6a27;
+    background: #ffffff;
     border-radius: 10px 10px 0 0;
 }
-.container > .canadian > .l-elbow { 
+.container > .german > .l-elbow { 
     position: absolute;
     height: 5%;
     width: 10%;
     left: 16%;
     top: 52%;
-    background: #921703;
+    background: #ffffff;
     transform: rotate(-8deg);
     z-index: -1;
     border-radius: 50px 0 0 10px;
 }
-.container > .canadian > .l-hand {
+.container > .german > .l-hand {
     position: absolute;
     height: 20%;
     width: 8%;
     left: 13%;
     top: 53%;
-    background: #921703;
+    background: #ffffff;
     border-radius: 80px 0 50px 50px;
     transform: rotate(6deg);
 }
-.container > .canadian > .r-hand {
+.container > .german > .r-hand {
     position: absolute;
     height: 20%;
     width: 8%;
     right: 13%;
     top: 53%;
-    background: #921703;
+    background: #ffffff;
     border-radius: 0 80px 50px 50px;
     transform: rotate(-6deg);
 }
-.container > .canadian > .l-finger {
+.container > .german > .l-finger {
     position: absolute;
     top: 71%;
     left: 11%;
@@ -296,9 +268,9 @@ body{
     width: 8%;
     height: 6%;
     border-radius: 60px;
-    background: #aa6a27;
+    background: #ffcc8a;
 }
-.container > .canadian > .r-finger {
+.container > .german > .r-finger {
     position: absolute;
     top: 71%;
     right: 11%;
@@ -306,29 +278,29 @@ body{
     width: 8%;
     height: 6%;
     border-radius: 60px;
-    background: #aa6a27;
+    background: #ffcc8a;
 }
-.container > .canadian > .r-elbow {
+.container > .german > .r-elbow {
     position: absolute;
     height: 5%;
     width: 10%;
     right: 16%;
     top: 52%;
-    background: #921703;
+    background: #ffffff;
     transform: rotate(8deg);
     z-index: -1;
     border-radius: 0 50px 10px  0;
 }
-.container > .canadian > .canadian-body > .liner{
+.container > .german > .german-body > .liner{
     position: absolute;
     left: 40%;
     margin: 0 auto;
-    background: #921703;
+    background: #ffffff;
     width: 15%;
     height: 87%;
     z-index: 2;
 }
-.container > .canadian > .canadian-body > .colar{
+.container > .german > .german-body > .colar{
     position: absolute;
     margin: 0 auto;
     left: 23%;
@@ -337,31 +309,31 @@ body{
     height: 50%;
     z-index: 2;
 }
-.container > .canadian > .canadian-body > .tie-head {
+.container > .german > .german-body > .tie-head {
     position: absolute;
     top: -3%;
     right: 32%;
     margin: 0 auto;
-    background: #921703;
+    background: #ffffff;
     width: 10%;
     height: 25%;
     transform: rotate(-26deg);
     z-index: 2;
     border-radius: 0 0 30px 0;
 }
-.container > .canadian > .canadian-body > .tie {
+.container > .german > .german-body > .tie {
     position: absolute;
     top: 10%;
     right: 32%;
     margin: 0 auto;
-    background: #921703;
+    background: #ffffff;
     width: 10%;
     height: 25%;
     z-index: 2;
     transform: rotate(6deg);
     border-radius: 0 0 30px 0;
 }
-.container > .canadian > .canadian-body > .tie > .line {
+.container > .german > .german-body > .tie > .line {
     position: absolute;
     background: #b55d4e;
     width: 100%;
@@ -369,7 +341,7 @@ body{
     margin: 10px 0 0 0;
     z-index: 2;
 }
-.container > .canadian > .l-hand > .line,  .container > .canadian > .r-hand > .line{
+.container > .german > .l-hand > .line,  .container > .german > .r-hand > .line{
     position: absolute;
     background: #aa6a27;
     width: 100%;
@@ -377,7 +349,7 @@ body{
     margin: 20px 0 0 0;
     z-index: 2;
 }
-.container > .canadian > .canadian-tip {
+.container > .german > .german-tip {
     position: absolute;
     height: 5%;
     width: 56%;
@@ -386,27 +358,27 @@ body{
     background: #c49869;
     border-radius: 100px;
 }
-.container > .canadian > .left-lap{
+.container > .german > .left-lap{
     position: absolute;
     height: 9%;
     width: 12%;
     left: 30%;
     bottom: 10%;
-    background: #921703;
+    background: #ffffff;
     border-radius: 0 0 30px 30px;
     z-index: 4;
 }
-.container > .canadian > .right-lap{
+.container > .german > .right-lap{
     position: absolute;
     height: 9%;
     width: 12%;
     right: 30%;
     bottom: 10%;
-    background: #921703;
+    background: #ffffff;
     border-radius: 0 0 30px 30px;
     z-index: 4;
 }
-.container > .canadian > .left-lap-tip {
+.container > .german > .left-lap-tip {
     position: absolute;
     height: 3%;
     width: 12%;
@@ -416,7 +388,7 @@ body{
     border-radius: 0 0 30px 30px;
     z-index: 4;
 }
-.container > .canadian > .right-lap-tip {
+.container > .german > .right-lap-tip {
     position: absolute;
     height: 3%;
     width: 12%;
@@ -426,16 +398,16 @@ body{
     border-radius: 0 0 30px 30px;
     z-index: 4;
 }
-.container > .canadian > .left-leg{
+.container > .german > .left-leg{
     position: absolute;
     height: 8%;
     width: 6%;
     left: 33%;
     bottom: 2.5%;
-    background: #921703;
+    background: #ffffff;
     z-index: 4;
 }
-.container > .canadian > .l-band{
+.container > .german > .l-band{
     position: absolute;
     width: 6%;
     height: 1%;
@@ -444,7 +416,7 @@ body{
     z-index: 5;
     bottom: 8%;
 }
-.container > .canadian > .r-band{
+.container > .german > .r-band{
     position: absolute;
     width: 6%;
     height: 1%;
@@ -453,232 +425,58 @@ body{
     z-index: 5;
     bottom: 8%;
 }
-.container > .canadian > .right-leg{
+.container > .german > .right-leg{
     position: absolute;
     height: 8%;
     width: 6%;
     right: 33%;
     bottom: 2.5%;
-    background: #921703;
+    background: #ffffff;
     z-index: 4;
 }
-.container > .canadian > .left-shoe {
+.container > .german > .left-shoe {
     position: absolute;
     height: 6%;
     width: 20%;
     left: 19%;
     bottom: 0;
-    background: #921703;
+    background: #000000;
     z-index: 4;
     border-radius: 50px 0 0 0;
 }
-.container > .canadian > .right-shoe {
+.container > .german > .right-shoe {
     position: absolute;
     height: 6%;
     width: 20%;
     right: 19%;
     bottom: 0;
-    background: #921703;
+    background: #000000;
     z-index: 4;
     border-radius: 0 50px 0 0;
 }
-.container > .canadian > .left-sow {
+.container > .german > .left-sow {
     position: absolute;
     height: 1%;
     width: 20%;
     left: 19%;
     bottom: 0;
-    background: #aa6a27;
+    background: #fe0018;
     z-index: 4;
 }
-.container > .canadian > .right-sow {
+.container > .german > .right-sow {
     position: absolute;
     height: 1%;
     width: 20%;
     right: 19%;
     bottom: 0;
-    background: #aa6a27;
+    background: #fe0018;
     z-index: 4;
-}
-.container > .upper-main > .hill {
-    position: absolute;
-    bottom: 10%;
-    width: 30%;
-    height: 35%;
-    right: 15%;
-    background: #6caa01;
-    z-index: 1;
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .upper-main > .hill2 {
-    position: absolute;
-    bottom: 10%;
-    width: 30%;
-    height: 25%;
-    right: 30%;
-    background: #6caa01;
-    z-index: 3;
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .upper-main > .hill-div {
-    position: absolute;
-    bottom: 23%;
-    width: 30%;
-    height: 15%;
-    right: 23%;
-    z-index: 1;
-    transform: rotate(-82deg);
-    background: #b5d580;
-    -webkit-clip-path: polygon(0 0, 0% 100%, 91% 100%);
-    clip-path: polygon(0 0, 0% 100%, 91% 100%);
-}
-.container > .upper-main > .hill-div2 {
-    position: absolute;
-    bottom: 15%;
-    width: 20%;
-    height: 15%;
-    left: 36.8%;
-    z-index: 3;
-    transform: rotate(-87.5deg);
-    background: #b5d580;
-    -webkit-clip-path: polygon(0 0, 0% 100%, 91% 100%);
-    clip-path: polygon(0 0, 0% 100%, 91% 100%);
-}
-.container > .upper-main > .hill-top {
-    width: 10%;
-    height: 16%;
-    left: 49.9%;
-    bottom: 27.3%;
-    background: #ffffff;
-    z-index: 5;
-    position: absolute;
-    -webkit-clip-path: polygon(52% 51%, 0 100%, 100% 100%);
-    clip-path: polygon(52% 51%, 0 100%, 100% 100%);
-}
-.container > .upper-main > .hill-top2 {
-    width: 8.5%;
-    height: 16%;
-    right: 26%;
-    top: 47%;
-    background: #ffffff;
-    z-index: 5;
-    position: absolute;
-    -webkit-clip-path: polygon(52% 51%, 0 100%, 100% 100%);
-    clip-path: polygon(52% 51%, 0 100%, 100% 100%);
-}
-.container > .upper-main > .hill-drop {
-    position: absolute;
-    width: 1.5%;
-    height: 4%;
-    left: 53.9%;
-    bottom: 25%;
-    background: #ffffff;
-    border-radius: 20px 20px 0 0;
-    z-index: 4;
-    transform: rotate(180deg);
-    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-}
-.container > .upper-main > .hill-drop2 {
-    position: absolute;
-    width: 1.5%;
-    height: 6%;
-    left: 57%;
-    bottom: 23%;
-    background: #ffffff;
-    border-radius: 20px 20px 0 0;
-    z-index: 4;
-    transform: rotate(180deg);
-    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-}
-.container > .upper-main > .hill-drop3 {
-    position: absolute;
-    width: 1.5%;
-    height: 6%;
-    right: 30%;
-    bottom: 33%;
-    background: #ffffff;
-    border-radius: 20px 20px 0 0;
-    z-index: 4;
-    transform: rotate(180deg);
-    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
 }
 .container > .footer{
     position: absolute;
     width: 100%;
     height: 5%;
     bottom: 5%;
-    background: #08a6ac;
+    background: #feca06;
     text-align: center;
-}
-.marple{
-    position: absolute;
-    top: 45%;
-    left: 90%;
-    width: 70%;
-    height: 30%;
-}
-.right-top-marple{
-    position: absolute;
-    top: -18%;
-    left: 10%;
-    width: 25%;
-    height: 50%;
-    z-index: 2;
-    background: #921703;
-    transform: rotate(-65deg);
-    -webkit-clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 84% 65%, 70% 100%, 55% 100%, 31% 100%, 18% 68%, 2% 35%, 31% 43%);
-    clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 84% 65%, 70% 100%, 55% 100%, 31% 100%, 18% 68%, 2% 35%, 31% 43%);
-
-}
-.middle-marple{
-    position: absolute;
-    top: -47%;
-    left: 20%;
-    width: 45%;
-    height: 70%;
-    z-index: 3;
-    background: #921703;
-    transform: rotate(5deg);
-    -webkit-clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 68% 81%, 68% 100%, 55% 100%, 36% 100%, 36% 77%, 2% 35%, 31% 43%);
-    clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 68% 81%, 68% 100%, 55% 100%, 36% 100%, 36% 77%, 2% 35%, 31% 43%);
-}
-.left-top-marple{
-    position: absolute;
-    top: -13%;
-    left: 40%;
-    width: 35%;
-    height: 50%;
-    z-index: 2;
-    background: #921703;
-    transform: rotate(65deg);
-    -webkit-clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 84% 65%, 70% 100%, 55% 100%, 31% 100%, 18% 68%, 2% 35%, 31% 43%);
-    clip-path: polygon(50% 0%, 68% 41%, 98% 35%, 84% 65%, 70% 100%, 55% 100%, 31% 100%, 18% 68%, 2% 35%, 31% 43%);
-}
-.marple-bottom{
-    position: absolute;
-    top: -13%;
-    left: 27%;
-    width: 30%;
-    height: 60%;
-    background: #921703;
-    z-index: 3;
-    -webkit-clip-path: polygon(51% 35%, 61% 35%, 89% 35%, 84% 60%, 92% 100%, 50% 97%, 9% 100%, 18% 58%, 11% 34%, 39% 35%);
-    clip-path: polygon(51% 35%, 61% 35%, 89% 35%, 84% 60%, 92% 100%, 50% 97%, 9% 100%, 18% 58%, 11% 34%, 39% 35%);
-}
-.cap-hold{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    top: 0;
-    left: 20%;
-}
-span.adroit{
-    font-size: 0.6em;
-    color: #ffffff;
-    font-weight: 100;
 }
