--- a/main.css
+++ b/main.css
@@ -93,8 +93,71 @@ body{
     height: 40%;
     left: 25%;
     top: 5%;
-    border-radius: 50% 50% 10% 10%;
-    background: #ffffff;
+}
+.container > .german > .german-head > .cap {
+    position: absolute;
+    width: 90%;
+    height: 20%;
+    left: 5%;
+    top: 0;
+    background: #000000;
+    z-index: 5;
+    border-radius: 50px 50px 0 0;
+    border-bottom: 20px solid #ffc800;
+}
+.container > .german > .german-head > .l-base-cap-cover {
+    position: absolute;
+    background: #000000;
+    width: 25%;
+    height: 20%;
+    left: 5%;
+    top: 12%;
+    z-index: 5;
+    -webkit-clip-path: polygon(0 0, 18% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 18% 0, 100% 100%, 0% 100%);
+}
+.container > .german > .german-head > .r-base-cap-cover {
+    position: absolute;
+    background: #000000;
+    width: 25%;
+    height: 20%;
+    right: 5%;
+    top: 12%;
+    z-index: 5;
+    -webkit-clip-path: polygon(82% 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(82% 0, 100% 0, 100% 100%, 0% 100%);
+}
+.container > .german > .german-head > .base-cap {
+    position: absolute;
+    width: 60%;
+    height: 30%;
+    left: 20%;
+    top: 12%;
+    background: #000000;
+    z-index: 4;
+    border-radius: 0 0 250px 250px;
+}
+.container > .german > .german-head > .l-base-cap {
+    position: absolute;
+    width: 40%;
+    height: 30%;
+    left: -5%;
+    top: 9%;
+    background: #000000;
+    z-index: 4;
+    border-radius: 250px 250px 250px 0;
+    transform: rotate(180deg);
+}
+.container > .german > .german-head > .r-base-cap {
+    position: absolute;
+    width: 40%;
+    height: 30%;
+    right: -5%;
+    top: 9%;
+    background: #000000;
+    z-index: 4;
+    border-radius: 250px 250px 0 250px;
+    transform: rotate(180deg);
 }
 .container > .german > .german-face {
     position: absolute;
@@ -175,7 +238,6 @@ body{
     left: 25%;
     top: 17%;
     z-index: 2;
-    border: 1px dotted #bd7201;
 }
 .container > .german > .hair-main > .h-left {
     position: absolute;
@@ -185,6 +247,18 @@ body{
     top: 17%;
     background: #bd7201;
     border-radius: 90px 0 300px 0;
+}
+.container >.german > .hair-main > .h-mid {
+    position: absolute;
+    height: 80%;
+    width: 11%;
+    left: 53.5%;
+    top: 17%;
+    z-index: 4;
+    background: #bd7201;
+    transform: rotate(160deg);
+    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
 .container > .german > .hair-main > .h-right {
     position: absolute;
@@ -228,6 +302,33 @@ body{
     top: 50%;
     background: #ffffff;
     border-radius: 10px 10px 30px 30px;
+}
+.container > .german > .german-body > .left-stripe {
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    background: #000000;
+    left: 15%;
+    border: 2px solid #fe0000;
+}
+.container > .german > .german-body > .right-stripe {
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    background: #000000;
+    right: 15%;
+    border: 2px solid #fe0000;
+}
+.container > .german > .german-body > .mid-stripe {
+    position: absolute;
+    height: 12%;
+    width: 46%;
+    border-radius: 30%;
+    background: #000000;
+    left: 27%;
+    top: 40%;
+    border-top: 2px solid #fe0000;
+    border-bottom: 2px solid #fe0000;
 }
 .container > .german > .l-elbow { 
     position: absolute;
@@ -357,6 +458,52 @@ body{
     top: 72%;
     background: #000000;
     border-radius:  0 0 30px 30px;
+}
+.container > .german > .german-tip > .inner {
+    position: absolute;
+    width: 80%;
+    height: 50%;
+    left: 10%;
+    border-left: 2px solid #fe0000;
+    border-right: 2px solid #fe0000;
+    border-top: 2px solid #fe0000;
+    border-radius: 10px 10px 0 0;
+}
+.container > .german > .german-tip > .inner > .button-left {
+    position: absolute;
+    width: 5%;
+    height: 10%;
+    left: 8%;
+    top: 20%;
+    border-radius: 10px;
+    background: #feca06;
+}
+.container > .german > .german-tip > .inner > .button-left2 {
+    position: absolute;
+    width: 5%;
+    height: 15%;
+    left: 8%;
+    top: 40%;
+    border-radius: 10px;
+    background: #feca06;
+}
+.container > .german > .german-tip > .inner > .button-right {
+    position: absolute;
+    width: 5%;
+    height: 10%;
+    right: 8%;
+    top: 20%;
+    border-radius: 10px;
+    background: #feca06;
+}
+.container > .german > .german-tip > .inner > .button-right2 {
+    position: absolute;
+    width: 5%;
+    height: 15%;
+    right: 8%;
+    top: 40%;
+    border-radius: 10px;
+    background: #feca06;
 }
 .container > .german > .left-lap{
     position: absolute;
