:wrench: flag done

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 *{margin: 0; padding: 0;}
 body{
-    background: #feface;
+    background: #daf2f4;
     font-family: 'Fjalla One', sans-serif;
 }
 .container{
@@ -12,7 +12,7 @@ body{
     padding: 50px;
 }
 .country-name{
-    color: #000000;
+    color: #ce001f;
     font-size: 3em;
     letter-spacing: 0.2em;
 }
@@ -21,7 +21,7 @@ body{
 }
 .country-flag{
     width: 17%;
-    height: 10%;
+    height: 14%;
     position: absolute;
     left: 15.5%;
 }
@@ -39,577 +39,18 @@ body{
     color: #341d31;
     font-size: 2em;
 }
-.germany-flag{
+.japan-flag{
     width: 100%;
     height: 100%;
-    background: #fe0000;
-}
-.germany-flag > .top-black {
-    position: absolute;
-    width: 100%;
-    height: 33.3%;
-    background: #000000;
-    top: 0;
-}
-.germany-flag > .middle {
-
-}
-.germany-flag > .bottom {
-    position: absolute;
-    width: 100%;
-    height: 33.3%;
-    background: #fee600;
-    bottom: 0;
-}
-.container > .upper-main > .german-building{
-    position: absolute;
-    width: 50%;
-    height: 60%;
-    right: 0;
-    bottom: 5%;
-    background: url("https://res.cloudinary.com/dc9kfp5gt/image/upload/v1549533642/Screenshot_2019-02-07_at_10.59.51_AM_elgset.png");
-    background-repeat: no-repeat;
-}
-.container > .german{
-    position: absolute;
-    width: 30%;
-    height: 55%;
-    bottom: 5%;
-    z-index: 3;
-}
-.container > .german > .german-head {
-    position: absolute;
-    width: 50%;
-    height: 40%;
-    left: 25%;
-    top: 5%;
-}
-.container > .german > .german-head > .cap {
-    position: absolute;
-    width: 90%;
-    height: 20%;
-    left: 5%;
-    top: 0;
-    background: #000000;
-    z-index: 5;
-    border-radius: 50px 50px 0 0;
-    border-bottom: 20px solid #ffc800;
-}
-.container > .german > .german-head > .l-base-cap-cover {
-    position: absolute;
-    background: #000000;
-    width: 25%;
-    height: 20%;
-    left: 5%;
-    top: 12%;
-    z-index: 5;
-    -webkit-clip-path: polygon(0 0, 18% 0, 100% 100%, 0% 100%);
-    clip-path: polygon(0 0, 18% 0, 100% 100%, 0% 100%);
-}
-.container > .german > .german-head > .r-base-cap-cover {
-    position: absolute;
-    background: #000000;
-    width: 25%;
-    height: 20%;
-    right: 5%;
-    top: 12%;
-    z-index: 5;
-    -webkit-clip-path: polygon(82% 0, 100% 0, 100% 100%, 0% 100%);
-    clip-path: polygon(82% 0, 100% 0, 100% 100%, 0% 100%);
-}
-.container > .german > .german-head > .base-cap {
-    position: absolute;
-    width: 60%;
-    height: 30%;
-    left: 20%;
-    top: 12%;
-    background: #000000;
-    z-index: 4;
-    border-radius: 0 0 250px 250px;
-}
-.container > .german > .german-head > .l-base-cap {
-    position: absolute;
-    width: 40%;
-    height: 30%;
-    left: -5%;
-    top: 9%;
-    background: #000000;
-    z-index: 4;
-    border-radius: 250px 250px 250px 0;
-    transform: rotate(180deg);
-}
-.container > .german > .german-head > .r-base-cap {
-    position: absolute;
-    width: 40%;
-    height: 30%;
-    right: -5%;
-    top: 9%;
-    background: #000000;
-    z-index: 4;
-    border-radius: 250px 250px 0 250px;
-    transform: rotate(180deg);
-}
-.container > .german > .german-face {
-    position: absolute;
-    width: 50%;
-    height: 25%;
-    left: 25%;
-    top: 20%;
-    background: #ffcc8a;
-    border-radius: 10%;
-}
-.container > .german > .german-face > .l-eye {
-    position: absolute;
-    top: 40%;
-    left: 25%;
-    width: 9%;
-    height: 13%;
-    background: #510814;
-    border-radius: 150px;
-    z-index: 2;
-}
-.container > .german > .german-face > .l-inner-eye {
-    position: absolute;
-    top: 42%;
-    left: 27%;
-    width: 3%;
-    height: 4%;
     background: #ffffff;
-    border-radius: 100px;
-    z-index: 3;
 }
-.container > .german > .german-face > .r-eye {
+.middle-circle{
     position: absolute;
-    top: 40%;
-    right: 25%;
-    width: 9%;
-    height: 13%;
-    background: #510814;
-    border-radius: 150px;
-    z-index: 2;
-}
-.container > .german > .german-face > .nose {
-    position: absolute;
-    top: 55%;
-    left: 45%;
-    width: 9%;
-    height: 13%;
-    background: #ce5557;
-    border-radius: 150px;
-    z-index: 3;
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .german > .german-face > .mouth {
-    position: absolute;
-    top: 75%;
-    left: 42%;
-    width: 14%;
-    height: 5%;
-    background: #ffffff;
-    border: 2px solid #ce5557;
-    border-radius: 50px;
-    z-index: 3;
-}
-.container > .german > .german-face > .r-inner-eye {
-    position: absolute;
-    top: 42%;
-    right: 27%;
-    width: 3%;
-    height: 4%;
-    background: #ffffff;
-    border-radius: 100px;
-    z-index: 3;
-}
-.container > .german > .hair-main {
-    position: absolute;
-    height: 10%;
-    width: 50%;
-    left: 25%;
-    top: 17%;
-    z-index: 2;
-}
-.container > .german > .hair-main > .h-left {
-    position: absolute;
-    height: 90%;
-    width: 50%;
-    left:0;
-    top: 17%;
-    background: #bd7201;
-    border-radius: 90px 0 300px 0;
-}
-.container >.german > .hair-main > .h-mid {
-    position: absolute;
-    height: 80%;
-    width: 11%;
-    left: 53.5%;
-    top: 17%;
-    z-index: 4;
-    background: #bd7201;
-    transform: rotate(160deg);
-    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-}
-.container > .german > .hair-main > .h-right {
-    position: absolute;
-    height: 90%;
-    width: 40%;
-    right:0;
-    top: 17%;
-    background: #bd7201;
-    border-radius: 0 90px 0 300px;
-}
-
-.container > .german > .german-neck {
-    position: absolute;
-    height: 5%;
-    width: 7%;
-    left: 46%;
-    top: 45%;
-    z-index: 4;
-    background: #ffcc8a;
-    border-radius: 0 0 20% 20%;
-} 
-.container > .german > .german-neck > .h-line{
-    position: absolute;
-    height: 100%;
-    width: 10%;
-    background: #b55d4e;
-    left: 25%;
-}
-.container > .german > .german-neck > .h-line2{
-    position: absolute;
-    height: 100%;
-    width: 10%;
-    background: #b55d4e;
-    left: 10%;
-}
-.container > .german > .german-body {
-    position: absolute;
-    height: 30%;
-    width: 50%;
-    left: 25%;
-    top: 50%;
-    background: #ffffff;
-    border-radius: 10px 10px 30px 30px;
-}
-.container > .german > .german-body > .left-stripe {
-    position: absolute;
-    height: 100%;
-    width: 10%;
-    background: #000000;
-    left: 15%;
-    border: 2px solid #fe0000;
-}
-.container > .german > .german-body > .right-stripe {
-    position: absolute;
-    height: 100%;
-    width: 10%;
-    background: #000000;
-    right: 15%;
-    border: 2px solid #fe0000;
-}
-.container > .german > .german-body > .mid-stripe {
-    position: absolute;
-    height: 12%;
-    width: 46%;
-    border-radius: 30%;
-    background: #000000;
-    left: 27%;
-    top: 40%;
-    border-top: 2px solid #fe0000;
-    border-bottom: 2px solid #fe0000;
-}
-.container > .german > .l-elbow { 
-    position: absolute;
-    height: 5%;
-    width: 10%;
-    left: 16%;
-    top: 52%;
-    background: #ffffff;
-    transform: rotate(-8deg);
-    z-index: -1;
-    border-radius: 50px 0 0 10px;
-}
-.container > .german > .l-hand {
-    position: absolute;
-    height: 20%;
-    width: 8%;
-    left: 13%;
-    top: 53%;
-    background: #ffffff;
-    border-radius: 80px 0 50px 50px;
-    transform: rotate(6deg);
-}
-.container > .german > .r-hand {
-    position: absolute;
-    height: 20%;
-    width: 8%;
-    right: 13%;
-    top: 53%;
-    background: #ffffff;
-    border-radius: 0 80px 50px 50px;
-    transform: rotate(-6deg);
-}
-.container > .german > .l-finger {
-    position: absolute;
-    top: 71%;
-    left: 11%;
-    bottom: 0;
-    width: 8%;
-    height: 6%;
-    border-radius: 60px;
-    background: #ffcc8a;
-}
-.container > .german > .r-finger {
-    position: absolute;
-    top: 71%;
-    right: 11%;
-    bottom: 0;
-    width: 8%;
-    height: 6%;
-    border-radius: 60px;
-    background: #ffcc8a;
-}
-.container > .german > .r-elbow {
-    position: absolute;
-    height: 5%;
-    width: 10%;
-    right: 16%;
-    top: 52%;
-    background: #ffffff;
-    transform: rotate(8deg);
-    z-index: -1;
-    border-radius: 0 50px 10px  0;
-}
-.container > .german > .german-body > .liner{
-    position: absolute;
-    left: 40%;
-    margin: 0 auto;
-    background: #ffffff;
-    width: 15%;
-    height: 87%;
-    z-index: 2;
-}
-.container > .german > .german-body > .colar{
-    position: absolute;
-    margin: 0 auto;
-    left: 23%;
-    background: #c49869;
-    width: 50%;
-    height: 50%;
-    z-index: 2;
-}
-.container > .german > .german-body > .tie-head {
-    position: absolute;
-    top: -3%;
-    right: 32%;
-    margin: 0 auto;
-    background: #ffffff;
-    width: 10%;
-    height: 25%;
-    transform: rotate(-26deg);
-    z-index: 2;
-    border-radius: 0 0 30px 0;
-}
-.container > .german > .german-body > .tie {
-    position: absolute;
-    top: 10%;
-    right: 32%;
-    margin: 0 auto;
-    background: #ffffff;
-    width: 10%;
-    height: 25%;
-    z-index: 2;
-    transform: rotate(6deg);
-    border-radius: 0 0 30px 0;
-}
-.container > .german > .german-body > .tie > .line {
-    position: absolute;
-    background: #b55d4e;
-    width: 100%;
-    height: 10%;
-    margin: 10px 0 0 0;
-    z-index: 2;
-}
-.container > .german > .l-hand > .line,  .container > .german > .r-hand > .line{
-    position: absolute;
-    background: #aa6a27;
-    width: 100%;
-    height: 10%;
-    margin: 20px 0 0 0;
-    z-index: 2;
-}
-.container > .german > .german-tip {
-    position: absolute;
-    height: 10%;
-    width: 50%;
-    left: 25%;
-    top: 72%;
-    background: #000000;
-    border-radius:  0 0 30px 30px;
-}
-.container > .german > .german-tip > .inner {
-    position: absolute;
-    width: 80%;
-    height: 50%;
-    left: 10%;
-    border-left: 2px solid #fe0000;
-    border-right: 2px solid #fe0000;
-    border-top: 2px solid #fe0000;
-    border-radius: 10px 10px 0 0;
-}
-.container > .german > .german-tip > .inner > .button-left {
-    position: absolute;
-    width: 5%;
-    height: 10%;
-    left: 8%;
-    top: 20%;
-    border-radius: 10px;
-    background: #feca06;
-}
-.container > .german > .german-tip > .inner > .button-left2 {
-    position: absolute;
-    width: 5%;
-    height: 15%;
-    left: 8%;
-    top: 40%;
-    border-radius: 10px;
-    background: #feca06;
-}
-.container > .german > .german-tip > .inner > .button-right {
-    position: absolute;
-    width: 5%;
-    height: 10%;
-    right: 8%;
-    top: 20%;
-    border-radius: 10px;
-    background: #feca06;
-}
-.container > .german > .german-tip > .inner > .button-right2 {
-    position: absolute;
-    width: 5%;
-    height: 15%;
-    right: 8%;
-    top: 40%;
-    border-radius: 10px;
-    background: #feca06;
-}
-.container > .german > .left-lap{
-    position: absolute;
-    height: 6%;
-    width: 12%;
+    top: 17.5%;
     left: 30%;
-    bottom: 13%;
-    background: #000000;
-    z-index: 4;
-}
-.container > .german > .right-lap{
-    position: absolute;
-    height: 6%;
-    width: 12%;
-    right: 30%;
-    bottom: 13%;
-    background: #000000;
-    z-index: 4;
-}
-.container > .german > .left-lap-tip {
-    position: absolute;
-    height: 3%;
-    width: 6%;
-    left: 33%;
-    bottom: 10%;
-    background: #ffcc8a;
-    z-index: 4;
-}
-.container > .german > .right-lap-tip {
-    position: absolute;
-    height: 3%;
-    width: 6%;
-    right: 33%;
-    bottom: 10%;
-    background: #ffcc8a;
-    z-index: 4;
-}
-.container > .german > .left-leg{
-    position: absolute;
-    height: 8%;
-    width: 6%;
-    left: 33%;
-    bottom: 2.5%;
-    background: #ffffff;
-    z-index: 4;
-}
-.container > .german > .l-band{
-    position: absolute;
-    width: 6%;
-    height: 1%;
-    left: 33%;
-    background: #aa6a27;
-    z-index: 5;
-    bottom: 8%;
-}
-.container > .german > .r-band{
-    position: absolute;
-    width: 6%;
-    height: 1%;
-    right: 33%;
-    background: #aa6a27;
-    z-index: 5;
-    bottom: 8%;
-}
-.container > .german > .right-leg{
-    position: absolute;
-    height: 8%;
-    width: 6%;
-    right: 33%;
-    bottom: 2.5%;
-    background: #ffffff;
-    z-index: 4;
-}
-.container > .german > .left-shoe {
-    position: absolute;
-    height: 6%;
-    width: 20%;
-    left: 19%;
-    bottom: 0;
-    background: #000000;
-    z-index: 4;
-    border-radius: 50px 0 0 0;
-}
-.container > .german > .right-shoe {
-    position: absolute;
-    height: 6%;
-    width: 20%;
-    right: 19%;
-    bottom: 0;
-    background: #000000;
-    z-index: 4;
-    border-radius: 0 50px 0 0;
-}
-.container > .german > .left-sow {
-    position: absolute;
-    height: 1%;
-    width: 20%;
-    left: 19%;
-    bottom: 0;
-    background: #fe0018;
-    z-index: 4;
-}
-.container > .german > .right-sow {
-    position: absolute;
-    height: 1%;
-    width: 20%;
-    right: 19%;
-    bottom: 0;
-    background: #fe0018;
-    z-index: 4;
-}
-.container > .footer{
-    position: absolute;
-    width: 100%;
-    height: 5%;
-    bottom: 5%;
-    background: #feca06;
-    text-align: center;
+    width: 40%;
+    height: 65%;
+    background: #ce001f;
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
 }
