--- a/main.css
+++ b/main.css
@@ -39,6 +39,19 @@ body{
     color: #341d31;
     font-size: 2em;
 }
+.adroit {
+    position: absolute;
+    right: 10%;
+    color: #5b5a5f;
+    font-size: 2em;
+    padding: 10px;
+    bottom: 10%;
+}
+.adroit > span {
+    display: block;
+    color: #341d31;
+    font-size: 0.5em;
+}
 .nigeria-flag{
     width: 100%;
     height: 100%;
@@ -64,7 +77,6 @@ body{
     height: 50%;
     left: 25%;
     bottom: 5%;
-    border: 1px solid;
 }
 .container > .election-2019 > .ballot {
     position: absolute;
@@ -119,4 +131,46 @@ body{
     border-radius: 0 0 5px 0;
     z-index: 2;
     transform: rotate(15deg);
+}
+.container > .election-2019 > .hand {
+    position: absolute;
+    width: 9%;
+    height: 13%;
+    background: #ffd4a0;
+    left: 50%;
+    bottom: 73%;
+    border-radius: 0 0 30px 0;
+    transform: rotate(-15deg);
+}
+.container > .election-2019 > .hand-inner {
+    position: absolute;
+    width: 4%;
+    height: 17%;
+    background: #ffd4a0;
+    left: 51%;
+    bottom: 67%;
+    border-radius: 0 0 30px 100px;
+    z-index: 3;
+    transform: rotate(65deg);
+}
+.container > .election-2019 > .inner-sleeve {
+    position: absolute;
+    width: 5%;
+    height: 13%;
+    background: #ffffff;
+    left: 58%;
+    bottom: 76%;
+    transform: rotate(-15deg);
+}
+.container > .election-2019 > .sleeve {
+    position: absolute;
+    width: 15%;
+    height: 16%;
+    background: #000000;
+    left: 61%;
+    bottom: 77%;
+    border-radius: 0 0 0 10px;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 5% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 5% 100%);
+    transform: rotate(-15deg);
 }
